tests/unit/paved-roads/set-security-context/patched-full-pod-securitycontext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: full-pod-securitycontext
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 9000
    runAsGroup: 9001
    fsGroup: 9002
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsUser: 1000
