tests/unit/paved-roads/set-security-context/patched-no-securitycontext-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-securitycontext-pod
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsUser: 1000
