tests/unit/paved-roads/set-security-context/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: set-security-context
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ['']
        apiVersions: ['v1']
        operations: ['CREATE', 'UPDATE']
        resources: ['pods']
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: >
          Object{
            spec: Object.spec{
              securityContext: Object.spec.securityContext{
                runAsNonRoot: has(object.spec.securityContext) && has(object.spec.securityContext.runAsNonRoot)
                             ? object.spec.securityContext.runAsNonRoot
                             : true,
                runAsUser: has(object.spec.securityContext) && has(object.spec.securityContext.runAsUser) && object.spec.securityContext.runAsUser != 0
                           ? object.spec.securityContext.runAsUser
                           : 1000,
                runAsGroup: has(object.spec.securityContext) && has(object.spec.securityContext.runAsGroup)
                            ? object.spec.securityContext.runAsGroup
                            : 3000,
                fsGroup: has(object.spec.securityContext) && has(object.spec.securityContext.fsGroup)
                         ? object.spec.securityContext.fsGroup
                         : 2000
              },
              containers: object.spec.containers.map(c,
                Object.spec.containers{
                  name: c.name,
                  securityContext: Object.spec.containers.securityContext{
                    allowPrivilegeEscalation: false,
                    readOnlyRootFilesystem: true,
                    runAsUser: has(c.securityContext) && has(c.securityContext.runAsUser) && c.securityContext.runAsUser != 0
                               ? c.securityContext.runAsUser
                               : 1000
                  }
                }
              )
            }
          }
