tests/unit/paved-roads/set-security-context/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-securitycontext-pod
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: partial-pod-securitycontext
spec:
  securityContext:
    runAsNonRoot: false
    runAsUser: 5000
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: full-pod-securitycontext
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 9000
    runAsGroup: 9001
    fsGroup: 9002
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: container-already-has-securitycontext
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
      securityContext:
        allowPrivilegeEscalation: true
        readOnlyRootFilesystem: false
        runAsUser: 42
---
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
    - name: sidecar
      image: ghcr.io/gharbiyasmine/sidecar:1.0
      securityContext:
        allowPrivilegeEscalation: true
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-runasuser-zero
spec:
  securityContext:
    runAsUser: 0
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: container-runasuser-zero
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/app:1.0
      securityContext:
        runAsUser: 0
